<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_wifi"
            android:layout_width="match_parent"
            style="@style/Card"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/image_view_wifi"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_wifi_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/wifi_logo" />


                <TextView
                    android:id="@+id/text_view_wifi_heading"
                    style="@style/Text.heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/wifi_password"
                    app:layout_constraintStart_toEndOf="@id/image_view_wifi"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_wifi_value"
                    style="@style/Text.value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_wifi_heading"
                    app:layout_constraintTop_toBottomOf="@id/text_view_wifi_heading"
                    tools:text="My wifi Password" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card"
            android:layout_marginTop="24dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/image_view_gmail"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gmail_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/gmail_logo" />


                <TextView
                    android:id="@+id/text_view_gmail_heading"
                    style="@style/Text.heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/gmail_password"
                    app:layout_constraintStart_toEndOf="@id/image_view_gmail"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_gmail_value"
                    style="@style/Text.value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_gmail_heading"
                    app:layout_constraintTop_toBottomOf="@id/text_view_gmail_heading"
                    tools:text="My gmail Password" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card"
            android:layout_marginTop="24dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/image_view_college"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/college_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/college_image" />


                <TextView
                    android:id="@+id/text_view_college_heading"
                    style="@style/Text.heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/college_i_d_password"
                    app:layout_constraintStart_toEndOf="@id/image_view_college"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_college_value"
                    style="@style/Text.value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_college_heading"
                    app:layout_constraintTop_toBottomOf="@id/text_view_college_heading"
                    tools:text="My college Password" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_laptop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card"
            android:layout_marginTop="24dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/image_view_laptop"
                    style="@style/Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/laptop_mac_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/laptop_image" />


                <TextView
                    android:id="@+id/text_view_laptop_heading"
                    style="@style/Text.heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/macbook_password"
                    app:layout_constraintStart_toEndOf="@id/image_view_laptop"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_laptop_value"
                    style="@style/Text.value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_view_laptop_heading"
                    app:layout_constraintTop_toBottomOf="@id/text_view_laptop_heading"
                    tools:text="My Mac Password" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>