<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_roll_no"
            android:layout_width="match_parent"
            style="@style/Card"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/image_view_roll_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Icon"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/baseline_person_pin_24"/>
                <TextView
                    android:id="@+id/text_view_roll_no_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.heading"
                    android:layout_marginStart="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_roll_no"
                    android:text="@string/roll_no"/>
                <TextView
                    android:id="@+id/text_view_roll_no_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_roll_no_heading"
                    app:layout_constraintStart_toStartOf="@id/text_view_roll_no_heading"
                    tools:text="22106102"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card"
            android:layout_marginTop="24dp"
            android:id="@+id/card_view_aadhar">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/image_view_aadhar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Icon"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/baseline_person_24"/>
                <TextView
                    android:id="@+id/text_view_aadhar_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.heading"
                    android:layout_marginStart="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_aadhar"
                    android:text="@string/aadhar_no"/>
                <TextView
                    android:id="@+id/text_view_aadhar_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_aadhar_heading"
                    app:layout_constraintStart_toStartOf="@id/text_view_aadhar_heading"
                    tools:text="22106102"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/Card"
            android:id="@+id/card_view_phone">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/image_view_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Icon"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/baseline_phone_24"/>
                <TextView
                    android:id="@+id/text_view_phone_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.heading"
                    android:layout_marginStart="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_phone"
                    android:text="@string/phone_no"/>
                <TextView
                    android:id="@+id/text_view_phone_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.value"
                    app:layout_constraintTop_toBottomOf="@id/text_view_phone_heading"
                    app:layout_constraintStart_toStartOf="@id/text_view_phone_heading"
                    tools:text="8668019627"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>